Revision history for Perl extension Test::MockObject.

1.03
	Sun Mar  5 00:37:01 UTC 2006 (chromatic)
	- removed test dependency on Test::Warn
	- improved signature test
	- improved mock package loading in T::MO::E (RT #17692 from Badgersrc)
	- clarified T::MO::E object wrapping behavior (RT #17929 from Larry Clapp)
	- named generated can() and isa() methods in T::MO::E
	- cleaned up some extraneous whitespace
	- allowed isa() to check reference type of mocked object once again (RT
	  #15446 from PM)
	- avoid circular references preventing mock destruction (RT #17941 from
	  David Pisoni)

1.02
	Sat Dec 24 08:36:07 UTC 2005 (chromatic)
	- avoid warnings in UNIVERSAL::isa and UNIVERSAL::can by always calling
	  both as methods (oops)
	- mark dependency on Perl 5.6.0
	- skip signature check without SIGNATURE file
	- remove chdir/library logic from tests and add warnings
	- clean up warnings in t/bugs.t
	- made Test::MockObject::Extends warnings clean

1.01
	Sat Aug 27 03:36:39 UTC 2005 (chromatic)
	- set $AUTOLOAD in parent AUTOLOAD(), if delegating (RT #14251)
	- don't require parent module if it has a new() method
	- use UNIVERSAL::isa and UNIVERSAL::can modules
	- give the installed isa() and can() methods the appropriate names in T::MO

1.00 
	Tue Jul 12 01:49:06 UTC 2005 (chromatic)
	- removed deprecated Test::MockObject::add()
	- fixed stringification-finding bug (reported by water on Perl Monks)
	- bumped up version numbers
	- added POD and POD coverage tests
	- added some documentation
	- allow catchable warnings in fake_module()
	- modify delegation approach (reported by Adam Kennedy in RT #13200)

0.20
	Wed Dec 15 02:57:48 UTC 2004 (chromatic)
	- added set_isas() to Test::MockObject (Stevan Little)
	- fixed typo in T::MO::E documentation (Stevan Little)
	- added SIGNATURE and t/0-signature.t

0.15
	Sun Nov 14 04:53:01 UTC 2004
	- allow skipping logging of certain methods (with tests and documentation)
	- avoid subroutine redefinition warnings in T::MO::E
